--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>GIS数据可视化</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../css/style_i.css">
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
