--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="pragma" content="no-cache"/>   
 <meta http-equiv="Cache-Control" content="no-cache, must-revalidate"/>   
 <meta http-equiv="expires" content="0"/>  
-	<link rel="stylesheet" type="text/css" href="/static/css/style_i.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/style_i.css?version=1.2.1">
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
    	<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
@@ -18,8 +18,8 @@
    	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZUONbpqGBsYGXNIYHicvbAbM"></script>
   	<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/bmap.min.js"></script>
   	<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/simplex.js"></script>
-	<script type="text/javascript" src="/static/js/click_func.js?version=1.3.2"></script>
-	<script type="text/javascript" src="/static/js/MapInit.js?version=1.3.1"></script>
+	<script type="text/javascript" src="/static/js/click_func.js?version=1.4.1"></script>
+	<script type="text/javascript" src="/static/js/MapInit.js?version=1.3.6"></script>
 	<script type="text/javascript" src="/static/js/DataInit.js?version=1.3.1"></script>
 </head>
 <body>
@@ -207,7 +207,7 @@
 								</li>
 								<li class="menu-2-2" id="selectL3">
 									输入时间
-									<input type="input" value="2018-2">
+									<input type="input" value="2018-2" id='date'>
 								</li>
 							</ul>
 						</div>
